Bug 361608 - possible leak in Safari profile migrator. r=mento.